--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="card-body">
             <h5 class="card-title">Freelance Photography</h5>
             <p class="card-text">
-              You can see my Powerpoint Presentation from international clients from freelancing sites.</p>
+              You can see my Recent Photo coverage from local clients. </p>
             <a href="images/Umagtang, Ferlauren.psd images/Resize.psd" class="btn btn-primary">See more here!</a>
           </div>
         </div>
